--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12562696.md#1" title="朱利安尼：民主党证人揭受训进行选举欺诈""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8VH7XP-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12562694.md#1" title="亨特一伙勾结中共新证据：收中企600万美元""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/09/0925-west-Cover02-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/tatmqp396/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://tatmqp396.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564978.md#1">乔治亚州大选依然诡异不断</a><br>
-:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564940.md#1">亚特兰大响应“停止窃选”“Stop the Steal”抗议集会</a><br>
-:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564787.md#1">数学教授分析：宾州高达10万选票令人质疑</a><br>
-:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564902.md#1">疫情复燃阻碍复苏 美下季经济或再衰退</a><br>
-:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564888.md#1">宾州众院决议由无党派委员会审计2020选举</a><br>
-:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564658.md#1">沈舟：美太空军星链计划应对中共威胁</a><br>
+:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564900.md#1">麦肯娜尼：为了“宪法程序” 川普不应让步</a><br>
+:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564893.md#1">美威斯康星州商场爆枪案 8人伤 枪手在逃</a><br>
+:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564978.md#1">乔治亚州大选依然诡异不断</a><br>
+:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564940.md#1">亚特兰大响应“停止窃选”“Stop the Steal”抗议集会</a><br>
+:clock8: <em>28分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564787.md#1">数学教授分析：宾州高达10万选票令人质疑</a><br>
+:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564902.md#1">疫情复燃阻碍复苏 美下季经济或再衰退</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560222.md#1">中共喉舌发长文捧习 分析：个人崇拜再升级</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12561275.md#1">赵立坚粗口骂五眼联盟 再现战狼本色</a><br>
@@ -27,8 +27,8 @@
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12563026.md#1">广州警方殴打外卖小哥 官方解释引网民炮轰</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12561355.md#1">拜登阵营丑闻：贿赂内华达原住民 花钱买票</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560109.md#1">陕西女大学生自杀身亡 遗书指遭系领导猥亵</a><br>
-<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560058.md#1">【翻墙必看】乔治亚州重新计票的骗局</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12562646.md#1">天津本土病例急增 滨海新区全员检测</a><br>
+<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560058.md#1">【翻墙必看】乔治亚州重新计票的骗局</a><br>
 <br><p align="center"><a href="https://github.com/tatmqp396/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12562260.md#1">鲍威尔：我们即将证明川普获压倒性胜利</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12561412.md#1">【一线采访】青岛滨海学院封校 学生：要疯了</a><br>
@@ -41,7 +41,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 367,912,030 人
+!共 367,912,330 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
