--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,11 +13,11 @@
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12563059.md#1" title="彭斯：防疫计划已到位 无需全国封锁""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1286584671-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12562696.md#1" title="朱利安尼：民主党证人揭受训进行选举欺诈""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8VH7XP-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/tatmqp396/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://tatmqp396.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12565004.md#1">【翻墙必看】习拒绝与西方“脱钩”</a><br>
-:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/10/24/n12499541.md#1">【思想领袖】吉尼斯：如何应对中共无声入侵</a><br>
-:clock8: <em>42分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564900.md#1">麦肯娜尼：为了“宪法程序” 川普不应让步</a><br>
-:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564893.md#1">美威斯康星州商场爆枪案 8人伤 枪手在逃</a><br>
-:clock8: <em>57分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564978.md#1">乔治亚州大选依然诡异不断</a><br>
+:clock8: <em>24分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12565004.md#1">【翻墙必看】习拒绝与西方“脱钩”</a><br>
+:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/10/24/n12499541.md#1">【思想领袖】吉尼斯：如何应对中共无声入侵</a><br>
+:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564900.md#1">麦肯娜尼：为了“宪法程序” 川普不应让步</a><br>
+:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564893.md#1">美威斯康星州商场爆枪案 8人伤 枪手在逃</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564978.md#1">乔治亚州大选依然诡异不断</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564940.md#1">亚特兰大响应“停止窃选”“Stop the Steal”抗议集会</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560222.md#1">中共喉舌发长文捧习 分析：个人崇拜再升级</a><br>
@@ -41,7 +41,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 367,914,225 人
+!共 367,915,043 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -56,7 +56,7 @@
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12562646.md#1">天津本土病例急增 滨海新区全员检测</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12563188.md#1">河北一民政局长办公楼坠亡 生前徘徊多次</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12565004.md#1">【翻墙必看】习拒绝与西方“脱钩”</a><br>
-<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564905.md#1">钟原：李克强谈农民消费 再泄内循环窘境</a><br>
+<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564648.md#1">王友群：中共大学性侵案为何那么多？</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564688.md#1">【新闻看点】美国再独立战争？川习角力APEC</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564311.md#1">吴京恐不能再拍动作戏 关节烂到软骨像杂草</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12562329.md#1">阮民安筹拍新歌《手足》 坚持重现抗争画面</a><br>
